k8s/minimal/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-backend
  namespace: cloud-storage
spec:
  selector:
    app: cloud-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
