k8s/minimal/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-frontend
  namespace: cloud-storage
spec:
  selector:
    app: cloud-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
