k8s/minimal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
  namespace: cloud-storage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cloud.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cloud-backend
                port:
                  number: 8000
